# structarnica

./: .gitignore  CMakeLists.txt  Readme.md  main.cpp
include/structarnica/: array.hpp  bst.hpp  circular_list.hpp  dlist.hpp  skip_list.hpp  slist.hpp  util.hpp
tests/: testCircularList.cpp  testDoubleList.cpp  testSingleList.cpp  testSkipList.cpp  testStaticArray.cpp  testiBinarySearchTree.cpp
